Merged with metadata-mongo4.0 branch that includes the update to Mongo v4.0